# inspiration-off-attractor

./: .gitignore  README.md  pyproject.toml
VLAD/: VLAD.mplstyle  VLAD_Talks.mplstyle  make_all_figs.slurm  make_atlas_images.py  push_all_to_rss.sh  sessions_to_use.csv  ssm_helpers.py  utils.py
VLAD/hering_breuer/: README.md  plot_hering_breuer.py  push2rss.sh
VLAD/low_d/: README.md  compute_pca_perturbations.py  compute_pca_perturbations.slurm  plot_pca_examples.py  plot_pca_perturbations.py  plot_pca_speed_example.py  plot_videos.py  push_to_rss.sh
VLAD/model/: README.md  analyze_nostim.slurm  analyze_rec_no_stim_fit.py  analyze_single_rec.py  analyze_single_rec.slurm  extract_dynamics.py  fit_model.py  fit_model_batch.slurm  fit_model_batch_nostim.slurm  infer_posterior.py  infer_posterior.slurm  infer_posterior_nostim.slurm  plot_stim_field_alignments.py  plot_summary_learned_sims.py  plot_summary_nostim_figures.py  push_to_rss.sh  rslds_pipeline_normed.slurm
VLAD/physiology/: README.md  compute_physiology.py  plot_physiology.py  plot_physiology.slurm  plot_viral_quantification.py  push_to_rss.sh  resp_rate_vs_fiber_pos_vgatai32.txt  resp_rate_vs_fiber_pos_vglut2ai32.txt
VLAD/scripts/: README.md  adjust_depths_relative_to_VII.py  convertks2alf.py  extract_resp_coherence.py  label_out_of_brain_clusters.py
VLAD/singlecell/: README.md  plot_singlecell.py  push2rss.sh
data/: chrmine_quantification.csv
